Bug 123694 - crash: Not possible to set Y error bars in Cell range
Summary: crash: Not possible to set Y error bars in Cell range
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.2.1.1 rc
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.2
Keywords: bibisected, bisected, regression
: 124090 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-02-25 09:44 UTC by andis.lazdins
Modified: 2019-04-11 18:39 UTC (History)
5 users (show)

See Also:
Crash report or crash signature: ["chart::RangeSelectionListener::done(com::sun::star::sheet::RangeSelectionEvent const &)"]


Attachments
Chart for reproduction of the problem (13.18 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-02-25 09:45 UTC, andis.lazdins
Details
chart error bar (50.75 KB, image/png)
2019-02-25 18:04 UTC, Oliver Brinzing
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andis.lazdins 2019-02-25 09:44:29 UTC
Description:
It is not possible any more to select Cell range for Y error bars. Manual entering of Cell range is still possible.

Steps to Reproduce:
1.Open attached file and enter chart by double mouse click on it.
2.Select data series by mouse click on it.
3.Select Insert > Y error bars.
4.Select Cell Range in Error Categories.
5.Mark Same value on both (not mandatory).
6.Push button on the right to Select data range.
7.Try to select cell range C1:C8.


Actual Results:
It is not possible to select cell range, however it is possible to enter it manually (Sheet name should be included, respectively T1.C1:C8). The window for selection of cell range can be closed only by clicking Enter on keyboard.

Expected Results:
It should be possible to select cell range by mouse.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 andis.lazdins 2019-02-25 09:45:30 UTC
Created attachment 149566 [details]
Chart for reproduction of the problem
Comment 2 Oliver Brinzing 2019-02-25 18:04:34 UTC
Created attachment 149583 [details]
chart error bar
Comment 3 Oliver Brinzing 2019-02-25 18:07:31 UTC
i can confirm this problem with:

Version: 6.2.1.1 (x64)
Build ID: 757c58e8cb70b2982843211a54750fb3cd79acd5
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: 

and lo crashes if one closes the "Y Eror Bars for Data Series "Column B" dialog, while "Select Range for Positive Error Bars;Area" dialog is open
Comment 4 Oliver Brinzing 2019-02-25 18:11:20 UTC
no crash with:

Version: 6.1.5.2 (x64)
Build ID: 90f8dcf33c87b3705e78202e3df5142b201bd805
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: de-DE (de_DE); Calc:
Comment 5 Xisco Faulí 2019-03-12 20:35:48 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8947c9b1d8cd407131fdfb6fc3c77c8532e9d2a0

author	Caolán McNamara <caolanm@redhat.com>	2018-10-18 13:00:41 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-10-20 13:52:34 +0200
commit 8947c9b1d8cd407131fdfb6fc3c77c8532e9d2a0 (patch)
tree f47becc099d139ae601fc41d9e8f49f24672f0e0
parent b361413eef7e46f340d921708faca9986c63c9f8 (diff)
weld SchAttribTabDlg

Bisected with: bibisect/bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 6 Commit Notification 2019-03-13 21:18:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d02381a70184f13031e5f2e19a837f5821e4a49c%5E%21

Resolves: tdf#123694 we need the controller, not the tabpage parent

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2019-03-13 21:43:04 UTC
fixed in master, backports in gerrit
Comment 8 Xisco Faulí 2019-03-14 08:37:41 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: c196d70337f6b755cfc4c34beda05554c6fab114
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 9 Commit Notification 2019-03-14 08:38:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/6ca6ca12f96524c9f68dad94b2857d98ca12134a%5E%21

Resolves: tdf#123694 we need the controller, not the tabpage parent

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2019-03-15 09:02:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2-2":

https://git.libreoffice.org/core/+/8e8029a891540664ac0ce59b23d586aefb5fe77c%5E%21

Resolves: tdf#123694 we need the controller, not the tabpage parent

It will be available in 6.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Oliver Brinzing 2019-03-15 17:24:01 UTC
*** Bug 124090 has been marked as a duplicate of this bug. ***
Comment 12 Xisco Faulí 2019-03-18 20:35:17 UTC
Closing as VERIFIED FIXED
Comment 13 andis.lazdins 2019-04-02 04:03:12 UTC
The problem is solved in 6.2.3.1.
Thanks!