Resolves: tdf#123694 we need the controller, not the tabpage parent

Change-Id: Ib390abaec648a1e06fcc35f83cb170fc654cf021
Reviewed-on: https://gerrit.libreoffice.org/69205
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>